force-app/main/default/objects/DM_Sale__c/DM_Sale__c.object-meta.xml
<CustomObject>
    <label>Sale</label>
    <nameField>
        <displayFormat>SALE-{0000}</displayFormat>
        <label>Sale #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>