force-app/main/default/objects/DM_Sale__c/fields/DM_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>DM_Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales</relationshipLabel>
    <relationshipName>Sales</relationshipName>
    <type>Lookup</type>
</CustomField>