force-app/main/default/objects/DM_Sale__c/fields/DM_Line_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>DM_Line_Item_Count__c</fullName>
    <label>Line Item Count</label>
    <summaryForeignKey>DM_Sale_Line_Item__c.DM_Sale__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>