force-app/main/default/objects/DM_Sale__c/fields/DM_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>DM_Purchase_Order__c</fullName>
    <label>Purchase Order #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>