force-app/main/default/objects/DM_Sale__c/fields/DM_Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Sale_Date__c</fullName>
    <label>Sale Date</label>
    <type>Date</type>
</CustomField>