force-app/main/default/objects/DM_Sale__c/fields/DM_Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>DM_Sales_Channel__c</fullName>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct to Consumer</fullName>
            </value>
            <value>
                <fullName>CSA</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Farmers Market</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>