force-app/main/default/objects/DM_Sale__c/fields/DM_Total_Sale_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Total_Sale_Amount__c</fullName>
    <label>Total Sale</label>
    <summarizedField>DM_Sale_Line_Item__c.DM_Sale_Amount__c</summarizedField>
    <summaryForeignKey>DM_Sale_Line_Item__c.DM_Sale__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>