force-app/main/default/objects/DM_Sale__c/recordTypes/DM_Sale.recordType-meta.xml
<RecordType>
    <fullName>DM_Sale</fullName>
    <active>true</active>
    <label>Sale</label>
</RecordType>