force-app/main/default/objects/DM_Sale__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DM_Customer_Account__c</columns>
    <columns>DM_Sale_Date__c</columns>
    <columns>DM_Sales_Channel__c</columns>
    <columns>DM_Direct_to_Market__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>