force-app/main/default/objects/DM_Sale__c/listViews/Inventory_Sales.listView-meta.xml
<ListView>
    <fullName>Inventory_Sales</fullName>
    <columns>NAME</columns>
    <columns>DM_Sale_Date__c</columns>
    <columns>DM_Customer_Account__c</columns>
    <columns>DM_Purchase_Order__c</columns>
    <columns>DM_Sales_Channel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DM_Direct_to_Market__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inventory Sales</label>
</ListView>